--- a/line-with-leader-lines/index.html
+++ b/line-with-leader-lines/index.html
@@ -621,25 +621,21 @@ function createLegend(){
 
 
       function addSteppedLine(svg, x1, x2, x3, y1, y2) {
-        var stroke = "lightgray"
-        svg.append("line")
-          .attr("x1", x1)
-          .attr("x2", x2)
-          .attr("y1", y1)
-          .attr("y2", y1)
-          .style("stroke", stroke);
-        svg.append("line")
-          .attr("x1", x2)
-          .attr("x2", x2)
-          .attr("y1", y1)
-          .attr("y2", y2)
-          .style("stroke", stroke);
-        svg.append("line")
-          .attr("x1", x2)
-          .attr("x2", x3)
-          .attr("y1", y2)
-          .attr("y2", y2)
-          .style("stroke", stroke);
+        function addLine(xa, xb, ya, yb) {
+          g.append("line")
+            .attr("x1", xa)
+            .attr("x2", xb)
+            .attr("y1", ya)
+            .attr("y2", yb)
+            .style("stroke-width", strokeWidth)
+            .style("stroke", stroke);
+        }
+        var g = svg.append("g");
+        var stroke = "#888"
+        var strokeWidth = 0.5;
+        addLine(x1, x2, y1, y1);
+        addLine(x2, x2, y1, y2);
+        addLine(x2, x3, y2, y2);
       }
 			function drawSteppedLines(leaderLines) {
 				leaderLines = leaderLines.concat().sort(function(a, b) {return a.y2 - b.y2});
@@ -664,7 +660,7 @@ function createLegend(){
 					for (var j=0; j<run.length; j++) { var sl_ = run[j];
 						var x2 = sl_.x3 - 6;
 						if (run.length > 1) {
-							var verticalLineWidth = Math.min((run.length - 1) * 2, 7);
+							var verticalLineWidth = Math.min((run.length - 1) * 3, 7);
 						  x2 = x2 + verticalLineWidth * j / (run.length - 1) - verticalLineWidth / 2;
 						}
 						addSteppedLine(svg, sl_.x1, x2, sl_.x3, sl_.y1, sl_.y2);
